# finger_drawing

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/input/: test.yaml
configs/model/: media_pipe.yaml
configs/output/: test.yaml
configs/video_handler/: webcam.yaml
docs/: Description.md  Experiments.md
notebooks/: finger.ipynb
src/finger_drawing/: __init__.py  app.py  utils.py  video_utils.py
src/finger_drawing/hand_detection_models/: __init__.py  media_pipe_detector.py
src/tests/: test_models.py
